# ESP32-DIV

./: CHANGELOG.md  CONTRIBUTING.md  FLASH_INSTRUCTIONS.txt  LICENSE  README.md  Touchscreen.h  bleconfig.h  bluetooth.cpp  create the plan in a new markdown file.md  flash_linux.sh  flash_mac.sh  flash_windows.bat  icon.h  platformio.ini  progress.md  readme.txt  shared.h  subconfig.h  subghz.cpp  utils.cpp  utils.h  wifi.cpp  wigle.example.txt
.github/: PULL_REQUEST_TEMPLATE.md
ESP32-DIV/: BoardConfig.h  BoardPins_ESP32DIV_V2.h  BuzzerService.cpp  BuzzerService.h  ESP32-DIV.ino  KeyboardUI.cpp  KeyboardUI.h  SettingsStore.cpp  SettingsStore.h  StatusLedService.cpp  StatusLedService.h  Theme.cpp  Touchscreen.cpp  Touchscreen.h  Touchscreen.h.bak  bleconfig.h  bluetooth.cpp  config.h  ducky.cpp  ducky.h  gps.cpp  gps.h  hardware_detect.h  icon.h  ir.cpp  ir.h  rfid.cpp  rfid.h  shared.h  subconfig.h  subghz.cpp  utils.cpp  utils.h  wifi.cpp  wificonfig.h
ESP32DIV/: HCScreen.h  detector.h  packetmonitor.cpp
ESP32DIV-platformIO/: platformio.ini
Flash File/: platform.txt
Libraries/: README.txt  User_Setup cyd.h  User_Setup v1.h  User_Setup v2.h  User_Setup.h
PCB/: ESPDIV-v1 schematic.SchDoc  ESPDIV-v1.PrjPcb
Schematic/: main-BOM.xls  shield-BOM.xlsx
docs/: index.html  main.js  manifest-cyd.json  manifest-v1.json  manifest.json  (+3 more)
tools/esp32-div-flasher/: .gitignore  ESP32-DIV Flasher.lnk  ESP32-DIV-Flasher.bat  build_exe.bat  esp32-div-flasher  flash_div.py  manifest.example.json  manifest.schema.json  pyproject.toml  requirements.txt  restore_icon_assets.py
(+137 files in other folders)
